# miri-soju

./: .env.example  .gitignore  alembic.ini  application.yml  desktop.ini  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
dashboard/: .env.example  README.md  __init__.py  __main__.py  app.py  config.py  deps.py  discord_api.py  requirements.txt  schemas.py
dashboard/frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/frontend/src/: App.tsx  main.tsx
dashboard/routers/: __init__.py  auth.py  automod.py  autoroles.py  boosterrole.py  guilds.py  leveling.py  moderation.py  music.py  prefix.py  serverlog.py  staff.py  starboard.py  tags.py  vanity.py  voicemaster.py  welcome.py
migrations/: env.py
migrations/versions/: 0aaa4ab140bf_add_automod_boosterrole_voicemaster_.py  6b7df4a2fba8_initial_schema.py  a17e9b0c0001_add_autoroles.py  a17e9b0c0002_add_tags.py  a17e9b0c0003_add_welcome_config.py  a17e9b0c0004_add_starboard.py  a17e9b0c0005_add_giveaways.py  a17e9b0c0006_add_polls.py  a1b2c3d4e5f0_add_staff_members.py  a9f3c1d7e5b2_drop_economy.py  b1c2d3e4f5a6_add_user_message_counts.py  b2c3d4e5f6a1_add_blacklists.py  c0ffee5a1b2c_add_music_config.py  d1a2b3c4e5f6_add_player_tos_accepted_at.py  e15584a04a9d_merge_command_usage_and_feature_.py  e2f3a4b5c6d7_add_command_usage.py
scripts/: dump_commands.py  new_module.py
src/: __main__.py
src/core/: blacklist.py  bot.py  cache.py  cache_sync.py  checks.py  embeds.py  emojis.py  error_log.py  errors.py  help_format.py  http.py  log_config.py  paginator.py  rankings.py  repository.py  setup_registry.py  staff_roster.py  timeparse.py  views.py
src/database/: base.py  session.py
src/database/models/: __init__.py  automod.py  autorole.py  blacklist.py  boosterrole.py  buttonrole.py  case.py  command_usage.py  errorlog.py  giveaway.py  guild.py  immune.py  infraction.py  jail.py  (+18 more)
tests/: conftest.py  test_ask_service.py  test_automod_detector.py  test_automod_escalation.py  test_automod_normalize.py  test_automod_setup.py  test_autoroles.py  test_blacklist.py  test_boosterrole.py  test_case_insensitive.py  test_dashboard_discord_api.py  test_dashboard_staff_gate.py  test_economy_agreement.py  test_economy_amounts.py  test_economy_engine.py  test_economy_views.py  test_embed_builder.py  test_errorlog.py  test_expressions_permissions.py  test_giveaways.py  test_help.py  test_http_ssrf.py  test_integration_flows.py  test_leaderboard.py  test_leveling_curve.py  test_leveling_setup.py  test_leveling_voice.py  test_migration_drift.py  test_moderation_service.py  test_msgcounter.py  test_paginator_timeout.py  test_polls.py  test_reminder.py  test_roles_guards.py  test_serverlog.py  test_setup_registry.py  test_smoke.py  test_starboard.py  test_styling.py  test_tags.py  (+5 more)
(+171 files in other folders)
