[project]
name = "miri"
version = "0.1.0"
description = "Miri, a modular Discord bot."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.7",
    "aiohttp>=3.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "jishaku>=2.7",
    "anthropic>=0.69",
    "wavelink>=3,<4",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "aiosqlite"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts these calls in argument defaults on
# purpose; they are not the mutable-default footgun B008 warns about.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
