[project]
name = "miri"
version = "0.1.0"
description = "Miri, a modular Discord bot."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.7",
    "aiohttp>=3.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "jishaku>=2.7",
    "anthropic>=0.69",
    "wavelink>=3,<4",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "aiosqlite"]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "starlette>=0.37",
    "httpx>=0.27",
    "itsdangerous>=2.0",   # required by starlette SessionMiddleware
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts these calls in argument defaults on
# purpose; they are not the mutable-default footgun B008 warns about.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
